Rewrote manual and updated documentation all around.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,19 +12,19 @@
         <h1><img src="images/icon.png" alt="" /> Scintillua</h1>
         <ul>
           <li><a href="index.html">Home</a> |</li>
-          <li><a href="http://foicica.com/scintillua/download">Download</a> |</li>
+          <li><a href="https://github.com/orbitalquark/scintillua/releases">Download</a> |</li>
           <li><a href="manual.html">Manual</a> |</li>
           <li><a href="api.html">API</a> |</li>
-          <li><a href="http://foicica.com/hg/scintillua">Source</a> |</li>
-          <li><a href="http://foicica.com/stats.html#Scintillua">Stats</a> |</li>
-          <li><a href="http://foicica.com/lists">Mailing List</a></li>
+          <li><a href="https://github.com/orbitalquark/scintillua">Source</a> |</li>
+          <li><a href="https://foicica.com/stats.html#Scintillua">Stats</a> |</li>
+          <li><a href="https://foicica.com/lists">Mailing List</a></li>
         </ul>
       </div>
       <div id="main">
         {{ content }}
       </div>
       <div id="footer">
-        <p style="text-align:center;"> &copy; 2006-2020 <a href="http://foicica.com">Mitchell</a> mitchell.att.foicica.com</p>
+        <p style="text-align:center;"> &copy; 2006-2020 <a href="https://foicica.com">Mitchell</a> mitchell.att.foicica.com</p>
       </div>
     </div>
   </body>
