Deprecating mailing list in favor of Discussions.

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
           <li><a href="manual.html">Manual</a> |</li>
           <li><a href="api.html">API</a> |</li>
           <li><a href="https://github.com/orbitalquark/scintillua">Source</a> |</li>
-          <li><a href="https://foicica.com/lists">Mailing List</a></li>
+          <li><a href="https://github.com/orbitalquark/scintillua/discussions">Support</a></li>
         </ul>
       </div>
       <div id="main">
